fix spacing

--- a/registry/nextjs/components/text-input/text-input.css
+++ b/registry/nextjs/components/text-input/text-input.css
@@ -31,6 +31,7 @@
     transition:
       top 0.2s ease-out,
       font-size 0.2s ease-out,
+      color 0.2s ease-out,
       letter-spacing 0.2s ease-out,
       opacity 0.2s ease-out,
       padding 0.2s ease-out,
@@ -70,6 +71,8 @@
       font-size: var(--label-font-size);
       letter-spacing: -0.004em;
       padding: 0 var(--lk-size-xs);
+      transform: translate(calc(-1 * var(--lk-size-2xs)), -61.8%);
+
     }
   }
 
